Update [ARE 212] Discussion Section - Python 01.ipynb

--- a/[ARE 212] Discussion Section - Python 01.ipynb
+++ b/[ARE 212] Discussion Section - Python 01.ipynb
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Open the website [URL to Interact](http://datahub.berkeley.edu/user-redirect/interact?account=ligon&repo=EEP153_Exercises&branch=master&path=week1.ipynb)\n",
+    "1. Open the website [URL to Interact](https://url-to-interact.herokuapp.com/)\n",
     "2. For `1. Choose your desired hub:` select `datahub.berkeley.edu`\n",
     "3. Either navigate to [my github](https://github.com/bk-econ/share) page and select the `URL` of the correct section or simply copy it from right here: https://github.com/bk-econ/share/blob/master/%5BARE%20212%5D%20Discussion%20Section%20-%20Python%2001.ipynb\n",
     "4. Paste the `URL` you copied in the previous step into `2. Paste the GitHub URL for your file or folder in the box below.`\n",
